--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>张晓枫 ・Stephen Zhang by stephensh</title>
+    <title>张晓枫 ・Stephen Zhang</title>
   </head>
 
   <body>
-    <a id="forkme_banner" href="https://github.com/stephensh">View on GitHub</a>
+    <!--<a id="forkme_banner" href="https://github.com/stephensh">View on GitHub</a>-->
     <div class="shell">
 
       <header>
